arcan-tui/src/widgets/snapshots/arcan_tui__widgets__approval_banner__tests__snapshot_low_risk.snap
---
source: crates/arcan-tui/src/widgets/approval_banner.rs
assertion_line: 119
expression: output
---
┌ Pending Approval ────────────────────────────────────────┐
│ ⚠ Approval Required   Risk: low                          │
│Tool: shell.exec  ID: ap-42                               │
│Args: {"cmd":"rm -rf /tmp/test"}                          │
│ /approve <id> yes | /approve <id> no                     │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
